# AnalysisFW

BDT_training/: CMakeLists.txt  TrainFactory.cpp  main.cpp
RunAnalysis/: DatasetsPaths.py  RunAnalysis.py  dataSets.py  infofile.py
RunAnalysis/utils/: DataNameGen.py  MetadataGen.py  Xsec.csv
data/MVA-Weights/: 10Folds_BDT-0.4.6.class.C  10Folds_BDT-0.4.6.weights.xml  10Folds_BDT-0.4.6_fold1.class.C  10Folds_BDT-0.4.6_fold1.weights.xml  10Folds_BDT-0.4.6_fold10.class.C  10Folds_BDT-0.4.6_fold10.weights.xml  10Folds_BDT-0.4.6_fold2.class.C  10Folds_BDT-0.4.6_fold2.weights.xml  10Folds_BDT-0.4.6_fold3.class.C  10Folds_BDT-0.4.6_fold3.weights.xml  10Folds_BDT-0.4.6_fold4.class.C  10Folds_BDT-0.4.6_fold4.weights.xml  10Folds_BDT-0.4.6_fold5.class.C  10Folds_BDT-0.4.6_fold5.weights.xml  10Folds_BDT-0.4.6_fold6.class.C  10Folds_BDT-0.4.6_fold6.weights.xml  10Folds_BDT-0.4.6_fold7.class.C  10Folds_BDT-0.4.6_fold7.weights.xml  10Folds_BDT-0.4.6_fold8.class.C  10Folds_BDT-0.4.6_fold8.weights.xml  10Folds_BDT-0.4.6_fold9.class.C  10Folds_BDT-0.4.6_fold9.weights.xml
include/: CLoop.h  CLoopConfig.h  DeclareHistograms.h  OutputTree.h  ReweightingTools.h  VBFBDT.h
python/: AnalysisFW.cpp  AnalysisWrapper.h
src/: Analysis.cpp  Analysis_BDT.cpp  Analysis_HM.cpp  CLoop.cpp  CLoopBackend.cpp  CMakeLists.txt  OutputTree.cpp  Tools.cpp
